[package]
name = "piztwo-os"
version = "0.1.0"
edition = "2021"
authors = ["r1TOASTER"]

[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"

[lib]
name = "piztwo_os_lib"
path = "src/lib.rs"
test = false
harness = false

[[test]]
name = "integration"
path = "tests/lib.rs"
harness = false