# [package]
# name = "tests"
# version = "0.1.0"
# edition = "2021"

# [lib]
# crate-type = ["rlib"]

# [dependencies]
# # Add dependencies (e.g., kernel crate if needed)
# kernel = { path = "../kernel" }

# [profile.dev]
# panic = "abort"
# opt-level = 0

# [target.aarch64-unknown-none]
# rustflags = [
#     "-C", "no-prepopulate-passes",
#     "-C", "no-stack-check",
#     "-C", "panic=abort",
#     "-Z", "no-landing-pads",
#     "-Z", "ub-checks=false",
# ]

[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
kernel = { path = "../kernel" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"